--- a/src/main/webapp/resources/js/views/Login.html
+++ b/src/main/webapp/resources/js/views/Login.html
@@ -56,7 +56,8 @@
             bottom: -40px;
             width: auto;
             height: auto;
-            background-image: url(http://ginva.com/wp-content/uploads/2012/07/city-skyline-wallpapers-008.jpg);
+            /*background-image: url(http://ginva.com/wp-content/uploads/2012/07/city-skyline-wallpapers-008.jpg);*/
+            background-image: url(../../../resources/img/dublinSky2.jpg);
             background-size: cover;
             -webkit-filter: blur(5px);
             z-index: 0;
