--- a/src/main/webapp/resources/js/views/Register.html
+++ b/src/main/webapp/resources/js/views/Register.html
@@ -71,10 +71,10 @@
             bottom: -40px;
             width: auto;
             height: auto;
-            background-image: url(http://ginva.com/wp-content/uploads/2012/07/city-skyline-wallpapers-008.jpg);
-            /*background-image: url('/Users/admin/Documents/College/4th_Year/FYP/Spring/WorkingWIP/springboottest/src/main/webapp/resources/images/dublin-skyline.jpg');*/
+            /*background-image: url(http://ginva.com/wp-content/uploads/2012/07/city-skyline-wallpapers-008.jpg);*/
+            background-image: url(../../../resources/img/dublinSky2.jpg);
             background-size: cover;
-             -webkit-filter: blur(5px);
+             -webkit-filter: blur(2 spx);
             z-index: 0;
         }
 
