Logout Working, logged in to multiple incognito browsers under different user accounts and logged out on each one seperately

--- a/src/main/webapp/resources/js/views/navbar.html
+++ b/src/main/webapp/resources/js/views/navbar.html
@@ -11,7 +11,7 @@
         </div><!-- Navbar Header-->
         <div class="collapse navbar-collapse" id="navbar-collapse">
 
-            <a href="http://google.com" class="btn btn-warning navbar-btn navbar-right">Enter</a>
+            <a ng-href="" ng-click = "logOut()" class="btn btn-warning navbar-btn navbar-right">Logout</a>
             <ul class="nav navbar-nav">
                 <li><a ng-href="#/login">Login</a>
                 <li><a ng-href="#/register">Register</a>
