FX-1 Who's online

--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -16,7 +16,7 @@
                 <li><a ng-href="#/login">Login</a>
                 <li><a ng-href="#/register">Register</a>
                 <li><a ng-href="#/allUsers">All Users</a>
-                <li><a ng-href="#/online">See Who's Online</a>
+                <li><a ng-href="#/onlineUsers">See Who's Online</a>
                 <li><a ng-href="#/welcome">Welcome Page</a>
             </ul>
         </div>
