--- a/src/main/webapp/resources/js/views/Login.html
+++ b/src/main/webapp/resources/js/views/Login.html
@@ -195,7 +195,7 @@
 <div class="login">
     <form id="login-form"  role="form">
 
-        <input type="text" ng-model="login.username" name="username" id="username"  placeholder="Username">
+        <input type="text" ng-model="login.username" name="username" autocomplete="off" id="username"  placeholder="Username">
         <input type="password" ng-model="login.password" name="password" id="password"  placeholder="Password">
         <input type="button" ng-click="submit()"    value="Login">
 
