--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -11,7 +11,7 @@
     <tr>
         <th>Username</th>
         <th>online</th>
-        <th>rank</th>
+        <th>The rank</th>
     </tr>
     </thead>
 
