online users list formatting

--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -1,11 +1,11 @@
 <!--<body ng-app="myApp" ng-controller="myCtrl" data-ng-init="init()">-->
-
-{{allUsersMessage}}
-<!--<h3 ng-repeat="x in allUsers">{{x.username}}</h3>-->
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/html" ng-app="myApp">
 
 <head>
     <link rel="stylesheet" type="text/css" href="allUsers.css">
 </head>
+
 <table>
     <thead>
     <tr>
@@ -24,3 +24,5 @@
     </tbody>
 
 </table>
+
+</html>
