dropdown added to navbar

--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="allUsers.css">
 </head>
 
+<body>
+
+
+
 <table>
     <thead>
     <tr>
@@ -24,5 +28,5 @@
     </tbody>
 
 </table>
-
+</body>
 </html>
