--- a/src/main/webapp/resources/js/views/Login.html
+++ b/src/main/webapp/resources/js/views/Login.html
@@ -1,37 +1,8 @@
-<!--Welcome to the login bitch-->
-
-<!--{{LoginText}}-->
-
-<!--<form id="login-form"  role="form" style="display: block;">-->
-
-<!--<div class="form-group">-->
-<!--<input type="text" ng-model="login.username" name="username" id="username" tabindex="1" class="form-control" placeholder="Username">-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<input type="password" ng-model="login.password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">-->
-<!--</div>-->
-<!--<div class="form-group text-center">-->
-<!--<input type="checkbox" tabindex="3" class="" name="remember" id="remember">-->
-<!--<label for="remember"> Remember Me</label>-->
-<!--</div>-->
-
-<!--<div class="form-group">-->
-<!--<div class="row">-->
-
-<!--<div class="col-sm-6 col-sm-offset-3">-->
-<!--<input type="submit" ng-click="submit()" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</form>-->
-
 <!DOCTYPE html>
 <html >
 <head>
     <meta charset="UTF-8">
-    <title>Random Login Form</title>
-
-
+    <title>Login Form</title>
 
     <style>
         /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
