--- a/src/main/webapp/resources/js/views/Register.html
+++ b/src/main/webapp/resources/js/views/Register.html
@@ -1,9 +1,7 @@
 <html >
 <head>
     <meta charset="UTF-8">
-    <title>Random Login Form</title>
-
-
+    <title>Registration Form</title>
 
     <style>
         /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
