Backend partially moved over, button added to navbar that will get all current forex prices

--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -21,6 +21,7 @@
                 <li><a ng-href="#/allUsers">All Users</a>
                 <li><a ng-href="#/onlineUsers">See Who's Online</a>
                 <li><a ng-href="#/welcome">Welcome Page</a>
+                <li><a ng-href="#/pairs">Current Forex Prices</a>
 
 
 
