Backend partially moved over, button added to navbar that will get all current forex prices

--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="allUsers.css">
 </head>
 
-<table>
+<table align="center">
     <thead>
     <tr>
         <th>Username</th>
