--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html" ng-app="myApp">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="allUsers.css">
+    <link rel="stylesheet" type="text/css" href="online.css">
 </head>
 
 <table align="center">
