--- a/src/main/webapp/resources/js/views/Pairs.html
+++ b/src/main/webapp/resources/js/views/Pairs.html
@@ -1,18 +1,21 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="pairs.css">
+</head>
 
 <table align = "center">
     <thead>
     <tr>
-        <th>Currency Pair</th>
-        <th>Bid</th>
-        <th>Ask</th>
+        <th align="center">Bid</th>
+        <th align="center">Currency Pair</th>
+        <th align="center">Ask</th>
     </tr>
     </thead>
 
     <tbody>
     <tr ng-repeat="x in pairs">
-        <td>{{x.symbols}}</td>
-        <td>{{x.bid}}</td>
-        <td>{{x.ask}}</td>
+        <td bgcolor="#f44e42"align="center">{{x.bid}}</td>
+        <td align="center">{{x.symbols}}</td>
+        <td bgcolor="#00FF00" align="center">{{x.ask}}</td>
     </tr>
     </tbody>
 
