Challenge button added to who's online page

--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -11,6 +11,8 @@
         <th>Username</th>
         <th>online</th>
         <th>The rank</th>
+        <th>Challenge</th>
+
     </tr>
     </thead>
 
@@ -19,6 +21,7 @@
         <td>{{x.username}}</td>
         <td>{{x.email}}</td>
         <td>ranks</td>
+        <td><button ng-click="challenge()" class="btn btn-success">Challenge</button></td>
     </tr>
     </tbody>
 
