Passing entire object from "challenge" button to controller

--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -21,7 +21,7 @@
         <td>{{x.username}}</td>
         <td>{{x.email}}</td>
         <td>ranks</td>
-        <td><button ng-click="challenge()" class="btn btn-success">Challenge</button></td>
+        <td><button ng-click="challenge(x)" class="btn btn-success" >Challenge</button></td>
     </tr>
     </tbody>
 
