UI for challenger and challenged to pick pair/direction

--- a/src/main/webapp/resources/js/views/Challenged.html
+++ b/src/main/webapp/resources/js/views/Challenged.html
@@ -16,6 +16,8 @@
         <th>Username</th>
         <th>Email</th>
         <th>Balance</th>
+        <th>Pick Pair</th>
+        <th>Long/Short</th>
     </tr>
     </thead>
 
@@ -26,6 +28,8 @@
         <td>{{currentUser.username}}</td>
         <td>{{currentUser.email}}</td>
         <td>{{currentUser.account.balance}}</td>
+        <td><select ng-model="challengerPair" ng-options="x.symbols for x in pairs"></td>
+        <td><select ng-model="challengerDirection" ng-options="x for x in direction"></td>
         <!--<td><button ng-click="getSclass="btn btn-success">Stats</button></td>-->
 
     </tr>
@@ -36,12 +40,17 @@
         <td>{{askedUserObject.username}}</td>
         <td>{{askedUserObject.email}}</td>
         <td>{{askedUserObject.account.balance}}</td>
+        <td><select ng-model="challengedPair" ng-options="x.symbols for x in pairs"></td>
+        <td><select ng-model="challengedDirection" ng-options="x for x in direction"></td>
+
         <!--<td><button ng-click="getSclass="btn btn-success">Stats</button></td>-->
 
     </tr>
     </tbody>
 
 </table>
+
+
 
 </body>
 </html>
