--- a/src/main/webapp/resources/js/views/Challenged.html
+++ b/src/main/webapp/resources/js/views/Challenged.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-{{currentUser.username}} challenged {{askedUserObject.username}}
 
 <table align="center">
     <thead>
+    <tr><th colspan="8">{{currentUser.username}} challenged {{askedUserObject.username}}</th> </tr>
     <tr>
         <th>Forename</th>
         <th>Surname</th>
@@ -18,6 +18,7 @@
         <th>Balance</th>
         <th>Pick Pair</th>
         <th>Long/Short</th>
+        <th>Stake</th>
     </tr>
     </thead>
 
@@ -30,6 +31,7 @@
         <td>{{currentUser.account.balance}}</td>
         <td><select ng-model="challengerPair" ng-options="x.symbols for x in pairs"></td>
         <td><select ng-model="challengerDirection" ng-options="x for x in direction"></td>
+        <td></td>
         <!--<td><button ng-click="getSclass="btn btn-success">Stats</button></td>-->
 
     </tr>
@@ -42,6 +44,7 @@
         <td>{{askedUserObject.account.balance}}</td>
         <td><select ng-model="challengedPair" ng-options="x.symbols for x in pairs"></td>
         <td><select ng-model="challengedDirection" ng-options="x for x in direction"></td>
+        <td></td>
 
         <!--<td><button ng-click="getSclass="btn btn-success">Stats</button></td>-->
 
