Added Timer to the Live play Table

--- a/src/main/webapp/resources/js/views/Challenged.html
+++ b/src/main/webapp/resources/js/views/Challenged.html
@@ -60,7 +60,7 @@
 <br><br><br><br>
 <table align="center">
     <thead>
-    <tr><th colspan="9">Live Game Info Feed</th> </tr>
+    <tr><th colspan="5">Live Game Info Feed</th> </tr>
     <tr>
 
         <th>Username</th>
@@ -87,6 +87,7 @@
        <td>{{challengedDirection}}</td>
        <td>{{challengedPosSize}}</td>
     </tr>
+    <tr><th colspan="5">Game Time {{ counter}}</th> </tr>
     </tbody>
 
 </table>
