--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -7,40 +7,50 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a href="" class="navbar-brand">ForexFighter</a>
+            <a class="navbar-brand">ForexFighter</a>
         </div><!-- Navbar Header-->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="collapse navbar-collapse" id="navbar-collapse">
 
             <!--<a ng-href="" ng-click = "logOut()" class="btn btn-warning navbar-btn navbar-right">Logout</a>-->
 
+            <!--<ul class="nav navbar-nav navbar-left">-->
+                <!--<li class="dropdown">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown<span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a ng-href="#/login">Login</a></li>-->
+                        <!--<li><a ng-href="#/register">Register</a></li>-->
+                        <!--<li><a href="#">Something else here</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+                        <!--<li><a href="#">Separated link</a></li>-->
+                        <!--<li role="separator" class="divider"></li>-->
+                        <!--<li><a href="#">One more separated link</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+            <!--</ul>-->
 
             <ul class="nav navbar-nav">
-                <!--<li><a ng-href="#/login">Login</a>-->
-                <!--<li><a ng-href="#/register">Register</a>-->
+
+
+
                 <li><a ng-href="" ng-click = "logOut()" class="btn btn-warning">Logout</a></li>
+
                 <li><a ng-href="#/allUsers">All Users</a>
                 <li><a ng-href="#/onlineUsers">See Who's Online</a>
                 <li><a ng-href="#/welcome">Welcome Page</a>
                 <li><a ng-href="#/pairs">Current Forex Prices</a>
 
 
+                 <li><a ng-href="#/login">Login</a>
+                 <li><a ng-href="#/register">Register</a>
+
+
+
 
             </ul>
 
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login/Register <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a ng-href="#/login">Login</a></li>
-                        <li><a ng-href="#/register">Register</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
+
+
+
 
         </div>
     </div>
