Fixed width table col's regardless of position size precision

--- a/src/main/webapp/resources/js/views/Challenged.html
+++ b/src/main/webapp/resources/js/views/Challenged.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+
 </head>
 <body>
 
@@ -63,7 +65,12 @@
 <br><br>
 <!--{{currentUserFinalPair.symbols}}-->
 <!--{{$scope.currUserLatestPositon}}-->
-<table align="center">
+<table align="center" width=600 style= 'table-layout:fixed'>
+    <col width="80px" />
+    <col width="80px" />
+    <col width="80px" />
+    <col width="80px" />
+    <col width="280px" />
     <thead>
     <tr><th colspan="5">Live Game Info Feed</th> </tr>
     <tr>
