--- a/src/main/webapp/resources/js/views/Challenged.html
+++ b/src/main/webapp/resources/js/views/Challenged.html
@@ -65,21 +65,28 @@
 <br><br>
 <!--{{currentUserFinalPair.symbols}}-->
 <!--{{$scope.currUserLatestPositon}}-->
-<table align="center" width=600 style= 'table-layout:fixed'>
+<table align="center" width=750 style= 'table-layout:fixed'>
+    <col width="100px" />
+    <col width="100px" />
+    <col width="100px" />
     <col width="80px" />
     <col width="80px" />
-    <col width="80px" />
-    <col width="80px" />
-    <col width="280px" />
+    <col width="100px" />
+    <col width="200px" />
+    <col width="120px" />
+
     <thead>
-    <tr><th colspan="5">Live Game Info Feed</th> </tr>
+    <tr><th colspan="8">Live Game Info Feed</th> </tr>
     <tr>
 
-        <th>Username</th>
-        <th>Balance</th>
-        <th>Pair</th>
-        <th>Direction</th>
-        <th>Position Size</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Username</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Available</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">M.Margin</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Margin %</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Pair</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Direction</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Current Value</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Net P&L</th>
     </tr>
     </thead>
 
@@ -87,19 +94,25 @@
     <tr>
         <td>{{currUser.username}}</td>
         <td>{{currUser.account.balance}}</td>
+        <td>{{currUserMargin}}</td>
+        <td>{{currMarginPercent}}%</td>
         <td>{{currentUserFinalPair.symbols}}</td>
         <td>{{currUserDirection}}</td>
         <td>{{currUserPosSize}}</td>
+        <td>$</td>
 
     </tr>
     <tr>
         <td>{{askedUser.username}}</td>
         <td>{{askedUser.account.balance}}</td>
+        <td>{{askedUserMargin}}</td>
+        <td>{{askedMarginPercent}}%</td>
         <td>{{askedUserFinalPair.symbols}}</td>
         <td>{{askedUserDirection}}</td>
         <td>{{askedUserPosSize}}</td>
+        <td>$</td>
     </tr>
-    <tr><th colspan="5">Game Time {{ counter}}</th> </tr>
+    <tr><th colspan="8">Game Time {{ counter}}</th> </tr>
     </tbody>
 
 </table>
