Updates retrieval of balance in fightrestcontroller

--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html" ng-app="myApp">
 
-<head>
-    <link rel="stylesheet" type="text/css" href="allUsers.css">
-</head>
+<!--<head>-->
+    <!--<link rel="stylesheet" type="text/css" href="allUsers.css">-->
+<!--</head>-->
 
 <body>
 
