--- a/src/main/webapp/resources/js/views/Register.html
+++ b/src/main/webapp/resources/js/views/Register.html
@@ -162,7 +162,7 @@
 <div class="login">
     <form id="register-form"  role="form">
 
-        <input type="text" ng-model="register.firstName"autocomplete="off" name="firstName" c placeholder="First Name" value="">
+        <input type="text" ng-model="register.firstName"autocomplete="off" name="firstName"  placeholder="First Name" value="">
         <input type="text" ng-model="register.lastName" autocomplete="off"name="lastName" placeholder="Last Name" value="">
         <input type="text" ng-model="register.username" autocomplete="off"name="username" id="username"  placeholder="Username">
         <input type="text" ng-model="register.email" autocomplete="off"name="email" id="email"  placeholder="Email">
