Moved "game in progress UI" into FightStart Controller/View etc

--- a/src/main/webapp/resources/js/views/Challenged.html
+++ b/src/main/webapp/resources/js/views/Challenged.html
@@ -63,57 +63,57 @@
 
 <br><br>
 
-<table align="center" width=750 style= 'table-layout:fixed'>
-    <col width="100px" />
-    <col width="100px" />
-    <col width="100px" />
-    <col width="80px" />
-    <col width="80px" />
-    <col width="100px" />
-    <col width="200px" />
-    <col width="120px" />
+<!--<table align="center" width=750 style= 'table-layout:fixed'>-->
+    <!--<col width="100px" />-->
+    <!--<col width="100px" />-->
+    <!--<col width="100px" />-->
+    <!--<col width="80px" />-->
+    <!--<col width="80px" />-->
+    <!--<col width="100px" />-->
+    <!--<col width="200px" />-->
+    <!--<col width="120px" />-->
 
-    <thead>
-    <tr><th colspan="8">Live Game Info Feed</th> </tr>
-    <tr>
+    <!--<thead>-->
+    <!--<tr><th colspan="8">Live Game Info Feed</th> </tr>-->
+    <!--<tr>-->
 
-        <th style = "background-color:#BDB76B;color:#ffffff;">Username</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Available</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">M.Margin</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Margin %</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Pair</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Direction</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Current Value</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">Net P&L</th>
-    </tr>
-    </thead>
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">Username</th>-->
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">Available</th>-->
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">M.Margin</th>-->
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">Margin %</th>-->
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">Pair</th>-->
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">Direction</th>-->
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">Current Value</th>-->
+        <!--<th style = "background-color:#BDB76B;color:#ffffff;">Net P&L</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
 
-    <tbody>
-    <tr>
-        <td>{{currUser.username}}</td>
-        <td>{{currUser.account.balance}}</td>
-        <td>{{currUserMargin}}</td>
-        <td>{{currMarginPercent}}%</td>
-        <td>{{currentUserFinalPair.symbols}}</td>
-        <td>{{currUserDirection}}</td>
-        <td>{{currUserPosSize}}</td>
-        <td>$</td>
+    <!--<tbody>-->
+    <!--<tr>-->
+        <!--<td>{{currUser.username}}</td>-->
+        <!--<td>{{currUser.account.balance}}</td>-->
+        <!--<td>{{currUserMargin}}</td>-->
+        <!--<td>{{currMarginPercent}}%</td>-->
+        <!--<td>{{currentUserFinalPair.symbols}}</td>-->
+        <!--<td>{{currUserDirection}}</td>-->
+        <!--<td>{{currUserPosSize}}</td>-->
+        <!--<td>$</td>-->
 
-    </tr>
-    <tr>
-        <td>{{askedUser.username}}</td>
-        <td>{{askedUser.account.balance}}</td>
-        <td>{{askedUserMargin}}</td>
-        <td>{{askedMarginPercent}}%</td>
-        <td>{{askedUserFinalPair.symbols}}</td>
-        <td>{{askedUserDirection}}</td>
-        <td>{{askedUserPosSize}}</td>
-        <td>$</td>
-    </tr>
-    <tr><th colspan="8">Game Time {{ counter}}</th> </tr>
-    </tbody>
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<td>{{askedUser.username}}</td>-->
+        <!--<td>{{askedUser.account.balance}}</td>-->
+        <!--<td>{{askedUserMargin}}</td>-->
+        <!--<td>{{askedMarginPercent}}%</td>-->
+        <!--<td>{{askedUserFinalPair.symbols}}</td>-->
+        <!--<td>{{askedUserDirection}}</td>-->
+        <!--<td>{{askedUserPosSize}}</td>-->
+        <!--<td>$</td>-->
+    <!--</tr>-->
+    <!--<tr><th colspan="8">Game Time {{ counter}}</th> </tr>-->
+    <!--</tbody>-->
 
-</table>
+<!--</table>-->
 
 </body>
 </html>
