--- a/src/main/webapp/resources/js/views/Pairs.html
+++ b/src/main/webapp/resources/js/views/Pairs.html
@@ -17,7 +17,7 @@
         <td align="center">{{x.symbols}}</td>
         <td bgcolor="#f44e42"align="center">{{x.bid}}</td>
         <td bgcolor="#00FF00" align="center">{{x.ask}}</td>
-        <td bgcolor="#00FF00" align="center">{{}}</td>
+        <td bgcolor="#00FF00" align="center">{{x.spreadPips}}</td>
     </tr>
 
     </tbody>
