--- a/src/main/webapp/resources/js/views/Pairs.html
+++ b/src/main/webapp/resources/js/views/Pairs.html
@@ -9,6 +9,7 @@
         <th align="center">Bid</th>
         <th align="center">Offer</th>
         <th align="center">Spread</th>
+        <th align="center">Time</th>
     </tr>
     </thead>
 
@@ -17,7 +18,8 @@
         <td align="center">{{x.symbols}}</td>
         <td bgcolor="#f44e42"align="center">{{x.bid}}</td>
         <td bgcolor="#00FF00" align="center">{{x.ask}}</td>
-        <td bgcolor="#00FF00" align="center">{{x.spreadPips}}</td>
+        <td bgcolor="#4286f4" align="center">{{x.spreadPips}}</td>
+        <td bgcolor="#f0f4b5" align="center">{{x.timeStampString}}</td>
     </tr>
 
     </tbody>
