--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -30,10 +30,9 @@
 
             <ul class="nav navbar-nav">
 
-                <li><a ng-href="" ng-click = "logOut()" class="btn btn-warning">Logout</a></li>
+                <!--<li><a ng-href="" ng-click = "logOut()" class="btn btn-warning">Logout</a></li>-->
 
                 <li><a ng-href="#/welcome">Home</a>
-                <li><a ng-href="#/logreg">Trade Now</a>
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Financial Markets Explained<span class="caret"></span></a>
@@ -53,15 +52,18 @@
 
                 <li>ff</li>
 
-                <li><a ng-href="#/allUsers">All Users</a>
-                <li><a ng-href="#/onlineUsers">See Who's Online</a>
+                <li ng-show='loggedIn'><a ng-href="#/allUsers">All Users</a>
+                <li ng-show='loggedIn'><a ng-href="#/onlineUsers">See Who's Online</a>
                 <li><a ng-href="#/pairs">Current Forex Prices</a>
 
                 <!--<li><a ng-href="#/login">Login</a>-->
                 <!--<li><a ng-href="#/register">Register</a>-->
 
-                <li ng-show='loggedIn'><a href="#Login">LogOut <span class="glyphicon glyphicon-user"></span></a></li>
-                <li ng-show='!loggedIn'><a href="#Signout">Login <span class="glyphicon glyphicon-user"></span></a></li>
+
+                <!--<li ng-show='loggedIn'><a href="#Login">LogOut <span class="glyphicon glyphicon-user"></span></a></li>-->
+
+                <li ng-show='loggedIn'><a ng-href="" ng-click = "logOut()" class="btn btn-warning">LogOut<span class="glyphicon glyphicon-user"></span></a></li>
+                <li ng-show='!loggedIn'> <a ng-href="#/logreg" >Trade Now <span class="glyphicon glyphicon-user"></span></a></li>
 
             </ul>
 
